# wire

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  wire.doxyfile
boost/: CMakeLists.txt
experiments/: CMakeLists.txt  bits-fun.cpp  enumerate_ifaces.cpp  ssl-client.cpp  ssl-server.cpp
idl/: CMakeLists.txt
lib/iri/test/: CMakeLists.txt  iri_gen_test.cpp  iri_parse_test.cpp
lib/iri/test/grammar/: grammar_gen_test.hpp  grammar_parse_test.hpp
lib/process/: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  bits.cpp
src/core/: endpoint.cpp
src/encoding/: buffers.cpp
src/wire/: CMakeLists.txt
src/wire/ast/: CMakeLists.txt  ast.cpp  ast.hpp  config.in.hpp  preprocess.cpp  preprocess.hpp
src/wire/bus/: CMakeLists.txt  bus_impl.cpp  bus_impl.hpp  bus_main.cpp  bus_options.hpp  bus_options_fwd.hpp  bus_service.cpp  bus_service.hpp  client.cpp  publisher.cpp  publisher.hpp
src/wire/core/: adapter.cpp  adapter_admin_impl.cpp  adapter_admin_impl.hpp  connection.cpp  connector.cpp  connector_admin_impl.cpp  connector_admin_impl.hpp  constants.cpp  context.cpp  dispatch_request.hpp  endpoint.cpp  identity.cpp  object.cpp  proxy.cpp  reference.cpp  reference_io.cpp  service.cpp  service.hpp  ssl_certificate.cpp  transport.cpp  transport.hpp  transport.inl
src/wire/encoding/: buffer_iterator.cpp  buffer_sequence.cpp  buffers.cpp  message.cpp
src/wire/errors/: exceptions.cpp  user_exception.cpp
src/wire/idl/: CMakeLists.txt  ast.cpp  ast.hpp  ast_fwd.hpp  config.in.hpp  generator.cpp  generator.hpp  lexer.hpp  parser.cpp  parser.hpp  preprocess.cpp  preprocess.hpp  qname.cpp  qname.hpp  qname_grammar.hpp  source_location.hpp  syntax_error.cpp  syntax_error.hpp  token_types.hpp  type_name.cpp  type_name.hpp
src/wire/json/: CMakeLists.txt  json_stream.cpp
src/wire/locator/: CMakeLists.txt  locator_impl.cpp  locator_impl.hpp  locator_main.cpp  locator_options.hpp  locator_probe.cpp  locator_service.cpp  locator_service.hpp
src/wire/util/: CMakeLists.txt  bits.cpp  connector_admin.cpp  console.cpp  enum_ifaces_util.cpp  enumerate_interfaces.cpp  murmur_hash.cpp  murmur_hash.hpp  murmur_hash_utility.cpp  plugin.cpp  service_runner.cpp  wire_ping.cpp
src/wire/wire2cpp/: CMakeLists.txt  cpp_generator.cpp  cpp_generator.hpp  cpp_source_stream.cpp  cpp_source_stream.hpp  fwd_generator.cpp  fwd_generator.hpp  generate_options.hpp  generator_plugin.hpp  keywords.cpp  keywords.hpp  mapped_type.hpp  plugin_manager.cpp  plugin_manager.hpp  wire2cpp.cpp
src/wire/wire2lua/: CMakeLists.txt  generate_options.hpp  lua_generator.cpp  lua_generator.hpp  lua_source_stream.cpp  lua_source_stream.hpp  mapped_type.hpp  wire2lua.cpp
support/: CMakeLists.txt  wire-core-lib.lua  wire-core.lua  wire-protocol.lua  wireshark-dissector.lua
test/: CMakeLists.txt  bits_tests.cpp  buffers_test.cpp  config.in.hpp  encoding_test.cpp  endpoints_io_test.cpp  iri_parse_test.cpp  iri_path_test.cpp  message_io_test.cpp  outgoing_buffer_test.cpp  static_tests.cpp  uuid_io_test.cpp
test/bus/: CMakeLists.txt  bus_inproc_test.cpp  bus_sparring_test.cpp  bus_test_interface.wire  bus_test_intf_impl.hpp  bus_test_main.cpp
test/cmake/: CMakeLists.txt
test/connector/: CMakeLists.txt  connector_configuration_test.cpp  connector_test_main.cpp  dummy_generator_plugin.cpp  dummy_generator_plugin.hpp  ping_pong.wire  ping_pong_client.cpp  ping_pong_fiber_test.cpp  ping_pong_impl.cpp  ping_pong_impl.hpp  ping_pong_options.cpp  ping_pong_options.hpp  ping_pong_sparring.cpp  ping_pong_test.cpp  ping_pong_test.hpp  send_multiple_test.cpp  ssl_ping_pong_test.cpp
test/data/: CMakeLists.txt  otherCA.key  otherCA.srl  ping_pong_connector.cfg  rootCA.key  test_connector_configuration.in.cfg  test_interface.wire  wire-client.crt  wire-client.csr  wire-other.csr  wire-server.crt  wire-server.csr
test/data/wire/: CMakeLists.txt  class.wire  empty.wire  enum.wire  exception.wire  interface.wire  lexer_test.wire  namespace.wire  structure.wire  type_aliases.wire
test/encoding/: CMakeLists.txt  arrays_io_test.cpp  boost_date_time_io_test.cpp  chrono_io_test.cpp  classes_for_io.wire  classes_io_test.cpp  concatenate_test.cpp  containers_io_test.cpp  endpoints_grammar_test.cpp  endpoints_io_test.cpp  exception_io_test.cpp  identity_grammar_test.cpp  identity_io_test.cpp  message_io_test.cpp  optional_io_test.cpp  outgoing_buffer_test.cpp  reference_grammar_test.cpp  segment_io_test.cpp  static_tests.cpp  uuid_io_test.cpp  variant_io_test.cpp  varint-decode.cpp  varint_io_test.cpp
test/idl/: CMakeLists.txt  ast_test.cpp  lexer_qi_test.cpp  lexer_test.cpp  parser_test.cpp  qname_fold.cpp  qname_test.cpp
test/json/: CMakeLists.txt  cereal_output_benchmarks.cpp  codepoints.cpp  debug_parser.hpp  json_test_config.in.hpp  json_test_suite.cpp  json_test_suite.in.cpp  output_benchmarks.cpp  output_tests.cpp  parse_tests.cpp  static_tests.cpp  test_data_structure.hpp  test_data_structure_cereal_io.hpp
test/locator/: CMakeLists.txt  locator_inproc_test.cpp  locator_sparring_test.cpp  locator_test_main.cpp  reference_resolve_test.cpp
test/sparring/: CMakeLists.txt  options.cpp  options.hpp  sparring_test.cpp  sparring_test.hpp
test/transport/: CMakeLists.txt  client_connection_test.cpp  config.in.hpp  options.cpp  options.hpp  otherCA.crt  rootCA.crt  rootCA.srl  socket_sparring.cpp  socket_sparring.hpp  socket_transport_test.cpp  sparring_options.cpp  sparring_options.hpp  sparring_partner.cpp  sparring_test.cpp  sparring_test.hpp  ssl_sparring.cpp  ssl_sparring.hpp  ssl_sparring_client.cpp  ssl_sparring_client.hpp  ssl_transport_server_test.cpp  ssl_transport_test.cpp  tcp_fiber_transport_test.cpp  tcp_sparring.cpp  tcp_sparring.hpp  tcp_sparring_client.cpp  tcp_sparring_client.hpp  tcp_transport_server_test.cpp  tcp_transport_test.cpp  transport_test_main.cpp  udp_sparring.cpp  udp_sparring.hpp  udp_transport_test.cpp  wire-client.key  wire-other.crt  wire-other.key  wire-server.key
test/util/: CMakeLists.txt  dummy_lib.cpp  dummy_lib.hpp  graph_test.cpp  plugin_config.in.hpp  plugins_test.cpp
(+176 files in other folders)
